--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -7,6 +7,7 @@
         <meta name="description" content="Get creative and design your own pixelart">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="apple-touch-icon" href="icon.png">
+        <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
@@ -19,19 +20,13 @@
         </header>
         <!-- end header -->
 
+        <nav class="nav">
+
+        </nav>
+
         <!-- start main -->
         <main class="main">
-          <!-- start aside -->
-          <aside class="aside">
-
-          </aside>
-          <!-- end aside -->
-
-          <!-- start article -->
-          <article class="article">
-            <canvas id="canvas" class="canvas"></canvas>
-          </article>
-          <!-- end article -->
+          <canvas id="canvas" class="canvas"></canvas>
         </main>
         <!-- end main -->
 
@@ -41,6 +36,6 @@
         </footer>
         <!-- end footer -->
 
-        <script src="app.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
