--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         <meta name="description" content="Get creative and design your own pixelart">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="apple-touch-icon" href="icon.png">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="css/layout.css">
         <link rel="stylesheet" href="css/app.css">
+
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -16,11 +19,16 @@
         <![endif]-->
         <!-- start header -->
         <header class="header">
-
+          <div class="header__icon" id="toggle-nav">
+            <i class="fas fa-cogs"></i>
+          </div>
+          <div class="header__title">
+            <h1>Pixel Art Maker</h1>
+          </div>
         </header>
         <!-- end header -->
 
-        <nav class="nav">
+        <nav class="nav" id="nav">
 
         </nav>
 
