--- a/index.html
+++ b/index.html
@@ -28,9 +28,68 @@
         </header>
         <!-- end header -->
 
-        <nav class="nav" id="nav">
+        <!-- start nav -->
+        <nav class="nav nav-open" id="nav">
+          <div class="nav__inner">
 
+            <div class="nav__icon" id="close-nav">
+              <i class="far fa-window-close"></i>
+            </div>
+
+            <form class="nav__form nav__form__grid">
+              <h1 class="nav__form__title">Grid Settings</h1>
+
+              <input type="number" id="width" min="5" max="100">
+              <label for="width">Width</label>
+
+              <input type="number" id="height" min="5" max="50">
+              <label for="height">Height</label>
+
+              <button type="submit" id="submit" class="btn">Create Grid</button>
+              <button type="submit" id="reset" class="btn">Reset Grid</button>
+            </form>
+
+            <form class="nav__form nav__form__project">
+              <h1 class="nav__form__title">Project Settings</h1>
+
+              <button type="submit" id="save" class="btn">Save Project</button>
+            </form>
+
+            <div class="nav__colorpicker">
+              <h1 class="nav__colorpicker__title">Color Picker</h1>
+
+              <div class="nav__colorpicker__wrapper">
+                <h4 class="nav__colorpicker__subtitle">Selected Color</h4>
+                <div class="nav__colorpicker__preview" id="hex-val-selected"></div>
+
+                <h4 class="nav__colorpicker__subtitle">Hover Color</h4>
+                <div class="nav__colorpicker__preview" id="preview"></div>
+              </div>
+
+              <canvas id="picker" var="1" class="nav__colorpicker__picker" width="300" height="300"></canvas>
+
+              <div class="nav__colorpicker__controls">
+                  <div>
+                    <p>R - <span id="rVal">255</span></p>
+                  </div>
+                  <div>
+                    <p>G - <span id="gVal">255</span></p>
+                  </div>
+                  <div>
+                    <p>B - <span id="bVal">255</span></p>
+                  </div>
+                  <div>
+                    <p>RGB - rgb(<span id="rgbVal">255, 255, 255</span>);</p>
+                  </div>
+                  <div>
+                    <p>HEX - <span id="hexVal">#ffffff</span>;</p>
+                  </div>
+              </div>
+            </div>
+
+          </div>
         </nav>
+        <!-- end nav -->
 
         <!-- start main -->
         <main class="main">
