--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <form class="nav__form nav__form__grid">
               <h1 class="nav__form__title">Grid Settings</h1>
 
-              <input type="number" id="width" min="5" max="100">
-              <label for="width">Width</label>
+              <input type="number" id="width" min="1" max="80">
+              <label for="width" id="width-label">Width</label>
 
-              <input type="number" id="height" min="5" max="50">
+              <input type="number" id="height" min="1" max="70">
               <label for="height">Height</label>
 
               <button type="submit" id="submit" class="btn">Create Grid</button>
@@ -93,7 +93,9 @@
 
         <!-- start main -->
         <main class="main">
-          <canvas id="canvas" class="canvas"></canvas>
+          <div class="main__inner">
+            <table id="canvas" class="canvas"></table>
+          </div>
         </main>
         <!-- end main -->
 
