Add footer layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- end header -->
 
         <!-- start nav -->
-        <nav class="nav nav-open" id="nav">
+        <nav class="nav" id="nav">
           <div class="nav__inner">
 
             <div class="nav__icon" id="close-nav">
@@ -101,6 +101,14 @@
 
         <!-- start footer -->
         <footer class="footer">
+          <ul class="footer__social">
+            <li>
+              <a href="https://github.com/Calexxxxx" target="_blank"><i class="fab fa-github-square"></i></a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/pascal-meers-20b61b111/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </li>
+          </ul>
           <p class="footer__desc">Create with love by <strong>Pascal Meers<strong></p>
         </footer>
         <!-- end footer -->
