Comment out save section sidenav temp

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
               <button type="submit" id="reset" class="btn">Reset Grid</button>
             </form>
 
-            <form class="nav__form nav__form__project">
+            <!-- <form class="nav__form nav__form__project">
               <h1 class="nav__form__title">Project Settings</h1>
 
               <button type="submit" id="save" class="btn">Save Project</button>
-            </form>
+            </form> -->
 
             <div class="nav__colorpicker">
               <h1 class="nav__colorpicker__title">Color Picker</h1>
