--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <label for="width" id="width-label">Width</label>
 
               <input type="number" id="height" min="1" max="70">
-              <label for="height">Height</label>
+              <label for="height" id="height-label">Height</label>
 
               <button type="submit" id="submit" class="btn">Create Grid</button>
               <button type="submit" id="reset" class="btn">Reset Grid</button>
