--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Pixel Art</title>
         <meta name="description" content="Get creative and design your own pixelart">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="theme-color" content="#1c2746">
         <link rel="apple-touch-icon" href="icon.png">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
